--- a/style.css
+++ b/style.css
@@ -10,18 +10,38 @@
     object-fit: cover; 
 }
 
+
 /* Homepagina navigatie */
 .menu {
     position: sticky;
     top:0;
     width: 100%;
-    background: rgba(0,0,0,0.7);
-    color: white;
-    text-align: center;
-    padding: 10px;
-    text-decoration: none;
+    background: burlywood;
+    padding: 20px;
     font-size: 20px;
     font-weight: 500;
+    text-align: center;
 }
 
+a.navlinks {
+    color: black;
+    text-decoration: none;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 20px;
+}
+
+a.navlinks:hover {
+    color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-decoration:none;
+    font-style: italic;
+    font-size: 20px;
+}
+
+/* Main */
+main {
+    padding-top: 10px;
+}
 
