--- a/style.css
+++ b/style.css
@@ -45,3 +45,10 @@ main {
     padding-top: 10px;
 }
 
+/* linkje naar memory */ 
+.linksintext {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+}
