--- a/style.css
+++ b/style.css
@@ -46,9 +46,8 @@ main {
 }
 
 /* linkje naar memory */ 
-.linksintext {
+a.linksintext {
     text-decoration: none;
     color: black;
-    font-size: 20px;
     font-weight: bold;
 }
