--- a/Memory/style.css
+++ b/Memory/style.css
@@ -80,3 +80,9 @@ a.navlinks:hover {
     font-style: italic;
     font-size: 20px;
 }
+
+/*bericht*/
+.message {
+    margin: 10px;
+    font-weight: bold;
+}
