--- a/Memory/style.css
+++ b/Memory/style.css
@@ -32,6 +32,7 @@ Body {
 /* Main */
 main {
     padding-top: 50px;
+    background-color: rgb(212, 192, 174);
 }
 
 /*Body*/
@@ -85,4 +86,10 @@ a.navlinks:hover {
 .message {
     margin: 10px;
     font-weight: bold;
+    font-size: 25px;
+}
+
+.button {
+    font-size: 25px;
+    color: rgb(163, 115, 64)
 }
