--- a/Memory/style.css
+++ b/Memory/style.css
@@ -39,6 +39,7 @@ main {
 Body{
     font-family: 'Times New Roman', Times, serif;
     background-color: rgb(245, 229, 215);
+    font-size: 20px;
 }
 
 /* plaatje */ 
