--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ main {
 Body{
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
+    background-color: rgb(245, 229, 215);
+
 }
 
 /* linkje naar memory */ 
