--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ main {
 
 /*Body*/
 Body{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     background-color: rgb(245, 229, 215);
 
