--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     top:0;
     width: 100%;
     background: burlywood;
-    height: 80px;
+    height: 100px;
     font-size: 25px;
     font-weight: 500;
     text-align: center;
@@ -47,7 +47,7 @@ main {
 
 /*Body*/
 Body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Times New Roman', Times, serif;
     font-size: 20px;
     background-color: rgb(245, 229, 215);
 
