--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     top:0;
     width: 100%;
     background: burlywood;
-    height: 100px;
+    padding: 75px;
     font-size: 25px;
     font-weight: 500;
     text-align: center;
