--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ Body{
     font-family:'Times New Roman', Times, serif;
     font-size: 20px;
     background-color: rgb(245, 229, 215);
+    padding-left: 20px;
 
 }
 
