--- a/Memory/style.css
+++ b/Memory/style.css
@@ -1,7 +1,3 @@
-Body {
-    text-align: center;
-}
-
 /*Vlak met kaarten*/
 .grid {
     display: grid;
@@ -37,9 +33,12 @@ main {
 
 /*Body*/
 Body{
-    font-family: 'Times New Roman', Times, serif;
-    background-color: rgb(245, 229, 215);
+    font-family:'Times New Roman', Times, serif;
     font-size: 20px;
+    background-color: rgb(245, 229, 215);
+    padding-left: 20px;
+    text-align: center;
+
 }
 
 /* plaatje */ 
