--- a/style.css
+++ b/style.css
@@ -69,3 +69,12 @@ a.linksintext:hover {
 footer {
     padding-left: 20px;
 }
+
+/*Mexico plaatje*/
+.destination-img {
+    max-width: 400px;
+    width: 100%;
+    border-radius: 12px;
+    margin: 20px 0;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+}
