--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@
 .menu {
     position: sticky;
     top:0;
-    box-sizing: border-box;
+    width: 100%;
     background: burlywood;
+    padding: 25px;
     font-size: 25px;
     font-weight: 500;
     text-align: center;
@@ -53,6 +54,7 @@ Body{
     font-family:'Times New Roman', Times, serif;
     font-size: 20px;
     background-color: rgb(245, 229, 215);
+    overflow-x: hidden;
 }
 
 /* linkje naar memory */ 
