--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@
     top:0;
     width: 100%;
     background: burlywood;
-    padding: 25px;
+    padding-bottom: 25px;
+    padding-top: 25px;
     font-size: 25px;
     font-weight: 500;
     text-align: center;
