--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ footer {
     padding-left: 20px;
 }
 
-/*Plaatje*/
+/*Plaatje random bestemmingen generator*/
 .destination-img {
     display: block;
     margin: 30px auto;     
