--- a/style.css
+++ b/style.css
@@ -102,3 +102,19 @@ footer {
     transform: scale(1.05);
 }
 
+/*Relaxvakanties pagina*/
+.europa {
+    text-align: left;
+}
+
+.afrika {
+    text-align: right;
+}
+
+.amerika {
+    text-align: left;
+}
+
+.azie {
+     text-align: right;
+}
