--- a/style.css
+++ b/style.css
@@ -14,14 +14,19 @@
 /* Homepagina navigatie */
 .menu {
     position: sticky;
-    top:0;
+    top: 0;
     width: 100%;
+    height: 50px;
     background: burlywood;
-    padding: 25px;
+    padding: 15px 30px;
+    display: flex;
+    align-items: center;
+    
     font-size: 25px;
     font-weight: 500;
     text-align: center;
 }
+
 
 a.navlinks {
     color: black;
@@ -77,4 +82,10 @@ footer {
     border-radius: 12px;
     margin: 20px 0;
     box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+}
+
+#logo img {
+    margin-right: 30px;
+    height: 210px;
+    width: auto;
 }
