footer verplaatst naar het midden

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ a.linksintext:hover {
 /*footer*/
 footer {
     padding-left: 20px;
+    text-align: center;
 }
 
 /*Plaatje random bestemmingen generator*/
