--- a/Quiz/style.css
+++ b/Quiz/style.css
@@ -80,3 +80,50 @@ button:hover {
     color: rgb(37, 97, 41);
     text-align: center;
 }
+
+/* Hoofdbalk + header afbeelding */
+.header-image {
+    position: relative;
+    height: 300px;
+}
+
+.header-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+/* Homepagina navigatie */
+.menu {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background: burlywood;
+    padding: 20px;
+    font-size: 25px;
+    font-weight: 500;
+    text-align: center;
+}
+
+a.navlinks {
+    color: black;
+    text-decoration: none;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 20px;
+}
+
+a.navlinks:hover {
+    color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-decoration: none;
+    font-style: italic;
+    font-size: 20px;
+}
+
+/* Main */
+main {
+    padding-top: 50px;
+}
+
