--- a/Quiz/style.css
+++ b/Quiz/style.css
@@ -10,7 +10,7 @@ body {
 
 /* Titel */
 h1 {
-    margin-top: 30px;
+    margin-top: 20px; 
     font-size: 40px;
     color: rgb(37, 97, 41);
     text-decoration: underline;
@@ -18,7 +18,7 @@ h1 {
 
 /* Subtitel */
 h2 {
-    margin-top: 40px;
+    margin-top: 25px; 
     font-size: 28px;
     color: rgb(163, 115, 64);
 }
@@ -26,7 +26,7 @@ h2 {
 /* Quizformulier */
 form {
     max-width: 600px;
-    margin: 30px auto;
+    margin: 20px auto; 
     background: burlywood;
     padding: 25px;
     border-radius: 10px;
@@ -74,7 +74,7 @@ button:hover {
 
 /* Resultaat */
 #resultaat {
-    margin-top: 25px;
+    margin-top: 20px; /* iets minder */
     font-size: 22px;
     font-weight: bold;
     color: rgb(37, 97, 41);
@@ -84,7 +84,7 @@ button:hover {
 /* Hoofdbalk + header afbeelding */
 .header-image {
     position: relative;
-    height: 300px;
+    height: 250px; 
 }
 
 .header-image img {
@@ -99,7 +99,7 @@ button:hover {
     top: 0;
     width: 100%;
     background: burlywood;
-    padding: 20px;
+    padding: 15px; 
     font-size: 25px;
     font-weight: 500;
     text-align: center;
@@ -124,6 +124,16 @@ a.navlinks:hover {
 
 /* Main */
 main {
-    padding-top: 50px;
+    padding-top: 20px; 
+}
+
+#confetti {
+    display: none; /* onzichtbaar bij openen */
+    position: fixed; /* blijft bovenaan hangen */
+    top: 0;
+    left: 0;
+    width: 100%;
+    pointer-events: none; /* niet op klikken */
+    z-index: 9999; /* boven alles */
 }
 
