--- a/style.css
+++ b/style.css
@@ -94,19 +94,19 @@ footer {
     width: auto;
 }
 
-/*Relaxte vakanties pagina*/
+/*Type vakanties pagina's*/
 .container_relaxvakanties {
     display: grid;
     grid-template-columns: 1fr 1fr; /*twee kolommen*/
     gap: 50px; /*ruimte tussen de blokken*/
 }
 
-.container_relaxvakanties > div {   /*Hierbij worden alle divs gepakt binnen de container (de continenten)*/
+.container_type_vakanties > div {   /*Hierbij worden alle divs gepakt binnen de container (de continenten)*/
     border: 1px solid #ccc;  /*randje om de vakken van de continenten*/
     padding: 20px;
 }
 
-.relaxvakantie_plaatjes {
+.type_vakanties_plaatjes {
     width: 350px;
     height: 300px;
 }
