--- a/Memory/style.css
+++ b/Memory/style.css
@@ -43,7 +43,7 @@ Body{
 /* plaatje */ 
 .header-image {
     position: relative;
-    height: 300px;
+    height: 450px;
 }
 
 .header-image img {
@@ -56,10 +56,13 @@ Body{
 /* Homepagina navigatie */
 .menu {
     position: sticky;
-    top:0;
+    top: 0;
     width: 100%;
+    height: 50px;
     background: burlywood;
-    padding: 20px;
+    padding: 15px 30px;
+    display: flex;
+    align-items: center;
     font-size: 25px;
     font-weight: 500;
     text-align: center;
