--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ footer {
     box-shadow: 0 10px 25px rgba(0,0,0,0.25);
 }
 
+/*Logo in menubalk*/
 #logo img {
     margin-right: 30px;
     height: 210px;
