--- a/Quiz/style.css
+++ b/Quiz/style.css
@@ -129,6 +129,13 @@ a.navlinks:hover {
     font-size: 20px;
 }
 
+/*Logo in menubalk*/
+#logo img {
+    margin-right: 30px;
+    height: 210px;
+    width: auto;
+}
+
 /* Main */
 main {
     padding-top: 10px; 
