--- a/Quiz/style.css
+++ b/Quiz/style.css
@@ -91,7 +91,7 @@ button:hover {
 /* Hoofdbalk + header afbeelding */
 .header-image {
     position: relative;
-    height: 250px; 
+    height: 450px; 
 }
 
 .header-image img {
@@ -105,8 +105,11 @@ button:hover {
     position: sticky;
     top: 0;
     width: 100%;
+    height: 50px;
     background: burlywood;
-    padding: 15px; 
+    padding: 15px 30px;
+    display: flex;
+    align-items: center;
     font-size: 25px;
     font-weight: 500;
     text-align: center;
@@ -124,7 +127,7 @@ a.navlinks:hover {
     color: black;
     padding-left: 20px;
     padding-right: 20px;
-    text-decoration: none;
+    text-decoration:none;
     font-style: italic;
     font-size: 20px;
 }
