--- a/Memory/style.css
+++ b/Memory/style.css
@@ -36,14 +36,17 @@ Body{
     font-family:'Times New Roman', Times, serif;
     font-size: 20px;
     background-color: rgb(245, 229, 215);
-    text-align: center;
-
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 /* plaatje */ 
 .header-image {
     position: relative;
     height: 450px; 
+    width: 100vw; 
+    margin: 0;
 }
 
 .header-image img {
