--- a/Memory/style.css
+++ b/Memory/style.css
@@ -32,19 +32,20 @@ main {
 
 
 /*Body*/
-Body{
+body{
     font-family:'Times New Roman', Times, serif;
     font-size: 20px;
     background-color: rgb(245, 229, 215);
-    overflow-x: hidden;
+    text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 /* plaatje */ 
 .header-image {
     position: relative;
     height: 450px; 
-    width: 100vw; 
-    margin: 0;
+    width: 100vw;
 }
 
 .header-image img {
